@@ -1,3 +1,8 @@
+Wed Sep 26 23:54:37 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/extmk.rb (extmake), lib/mkmf.rb (configuration): top_srcdir
+	  should not prefixed with DESTDIR.
+
 Wed Sep 26 08:36:31 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* Makefile.in (ext/extinit.o): use $(OUTFLAG) as well as other
